# voice-insight-api

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-worker-cuda.txt  requirements-worker.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
assistant/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
assistant/src/core/: clients.py  config.py  conversation.py
assistant/src/gateway/: main.py
assistant/tests/: test_config.py
benchmarks/: README.md
benchmarks/results/: .gitignore
scripts/: install-service.sh  setup-voxtralc.sh  test-stt.sh  test-tts.sh  uninstall-service.sh
src/: __init__.py  worker_manager.py
src/core/: config.py  memory.py  supervisor.py
src/gateway/: main.py
src/workers/: base.py  cuda_stt_worker.py  cuda_tts_worker.py  stt_worker.py  tts_worker.py  voxtralc_stt_worker.py
tests/: test_config.py  test_gateway.py
