[project]
name = "voice-insight-api"
version = "0.1.0"
description = "Self-hosted STT/TTS API optimized for Apple Silicon (MLX)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "PyYAML>=6.0.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
worker = [
    "mlx>=0.22.0",
    "mlx-audio>=0.2.0",
    "huggingface-hub>=0.20.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
